Added meaning full error messages when there is an error

--- a/Wonga.UnitTest/Wonga.UnitTest.csproj
+++ b/Wonga.UnitTest/Wonga.UnitTest.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Wonga.ServiceA\Wonga.ServiceA.csproj" />
     <ProjectReference Include="..\Wonga.ServiceB\Wonga.ServiceB.csproj" />
   </ItemGroup>
 
